test/basic/resolve_reserved_buffers_reject_non_peer_init_a5.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @cube_kernel(%consumer_buf: i32)
      attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %pipe = pto.initialize_l2l_pipe {
      dir_mask = 1,
      slot_size = 1024,
      slot_num = 8
    }(%consumer_buf : i32) -> !pto.pipe
    return
  }
}

// CHECK: error: 'pto.initialize_l2l_pipe' op requires local_addr to come from pto.reserve_buffer or pto.import_reserved_buffer when 'flag_base' is not explicit
